@@ -101,6 +101,35 @@ class RemotePayuLatamTest < Test::Unit::TestCase
     assert_equal "PENDING", response.params["transactionResponse"]["state"]
   end
 
+  def test_well_formed_refund_fails_as_expected
+    purchase = @gateway.purchase(@amount, @credit_card, @options)
+    assert_success purchase
+
+    assert refund = @gateway.refund(@amount, purchase.authorization, @options)
+    assert_equal "The payment plan id cannot be empty", refund.message
+  end
+
+  def test_failed_refund
+    response = @gateway.refund(@amount, '')
+    assert_failure response
+    assert_match /property: parentTransactionId, message: must not be null/, response.message
+  end
+
+  def test_successful_void
+    auth = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success auth
+
+    assert void = @gateway.void(auth.authorization)
+    assert_success void
+    assert_equal "APPROVED", void.message
+  end
+
+  def test_failed_void
+    response = @gateway.void('')
+    assert_failure response
+    assert_match /property: parentTransactionId, message: must not be null/, response.message
+  end
+
   def test_verify_credentials
     assert @gateway.verify_credentials
 
